--- a/web/misEstilos.css
+++ b/web/misEstilos.css
@@ -3,7 +3,108 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css to edit this template
 */
 /* 
-    Created on : 10 oct. 2023, 09:26:29
+    Created on : 17 oct. 2023, 07:56:10
     Author     : ET36
 */
 
+.boton{
+    background-color: wheat;
+    color: darkmagenta;
+    width: 200px;
+    height: 200px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+    font-family: fantasy;
+    text-decoration: none;
+}
+
+.texto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+}
+
+.containerBoton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.imagen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+img{
+    width: 800px;
+    height: 500px;
+    border: 5px solid wheat;
+}
+
+.botones{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    text-decoration: none;
+}
+
+body{
+    background-color: lightskyblue;   
+}
+
+.texto2{
+    font-size: 30px;
+    font-family: arial;
+}
+
+.botonConsulta{
+    background-color: wheat;
+    color: darkmagenta;
+    width: 150px;
+    height: 80px;
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.legajo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.textoLegajo{
+    height: 20px;
+    margin-left: 30px;
+}
+
+.divBoton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.volver{
+    background-color: wheat;
+    color: darkmagenta;
+    width: 100px;
+    height: 100px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+    font-family: fantasy;
+    text-decoration: none;
+}
